swiper bug on uglify and overflow fix on tingle modal

--- a/src/stylesheets/components/_components.header.scss
+++ b/src/stylesheets/components/_components.header.scss
@@ -20,6 +20,14 @@
     .c-header__nav {
       color: $white;
     }
+
+    .c-header__btn{
+      &:hover,
+      &:active{
+        background-color:$white;
+        color:$tundora;
+      }
+    }
   }
 }
 
