--- a/src/stylesheets/components/_components.hero.scss
+++ b/src/stylesheets/components/_components.hero.scss
@@ -1,12 +1,15 @@
 .c-hero {
-  background-image: url("../images/hero-mobile.png");
-  background-position: center;
+  background-color:$tundora;
+  background-image: url("../images/hero-desktop.png");
   background-repeat: no-repeat;
-  background-size: cover;
-  height: 690px;
+  // background-size:450%;
+  background-size:cover;
+  background-position:65% 300%;
+  padding: 48px 0 400px 0;
   @include mq($from:tablet) {
-    background-image: url("../images/hero-desktop.png");
-    height: 600px;
+    padding: 72px 0 265px 0;
+    background-size: cover;
+    background-position: center;
   }
 }
 
