--- a/src/stylesheets/components/_components.popup.scss
+++ b/src/stylesheets/components/_components.popup.scss
@@ -1,3 +1,8 @@
+.tingle-enabled{
+  width:100%;
+  overflow: visible !important;
+}
+
 .c-popup {
   padding:40px 180px 62px 180px;
   display:flex;
